--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src= "imdb_otput.js"></script>
+  <script src= "imdb_output.js"></script>
   <script type= "text/javascript">
 
   function load_imdb_images(){
     var div = document.getElementById('data');
 
-    for(var i 0; i<imdb_output.legth; i++){
+    for(var i = 0; i < imdb_output.length; i++){
       var img = "<img class='tile' src='"+ imdb_output[i] + "'>";
       div.innerHTML = div.innerHTML + img;
     }
