--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src= "imdb_output.js"></script>
+  <script src= "guten_output.js"></script>
   <script type= "text/javascript">
 
-  function load_imdb_images(){
+  function load_guten_images(){
     var div = document.getElementById('data');
 
-    for(var i = 0; i < imdb_output.length; i++){
-      var img = "<img class='tile' src='"+ imdb_output[i] + "'>";
+    for(var i = 0; i < guten_output.length; i++){
+      var img = "<img class='tile' src='"+ guten_output[i] + "'>";
       div.innerHTML = div.innerHTML + img;
     }
 
@@ -46,7 +46,7 @@
   </script>
 </head>
 
-<body onload ="load_imdb_images()">
+<body onload ="load_guten_images()">
   <div id="data">
 
   </div>
