--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" href="index.css" />
   <script src= "guten_output.js"></script>
   <script type= "text/javascript">
+
 
   function load_guten_images(){
     var div = document.getElementById('data');
