--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
 
 <body onload ="load_guten_images()">
   <div id="data">
+
+  </div>
+
+  <div class="text" id="text">
     <embed src="guten_address.txt">
 
   </div>
