--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   </div>
 
   <div class="text" id="text" width=300 height=1000>
-    <embed src="guten_address.txt">
+    <!-- <embed src="guten_address.txt"> -->
 
   </div>
 
