--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
   </div>
 
-  <div class="text" id="text" width='300' height='1000'>
+  <div class="text" id="text" width='300px' height='1000px'>
     <embed src="guten_address.txt">
 
   </div>
