--- a/index.html
+++ b/index.html
@@ -53,8 +53,15 @@
 
   </div>
 
-  <div class="text" id="text" width='300px' height='1000px'>
+  <!-- <div class="text" id="text" width='300px' height='1000px'>
     <embed src="guten_address.txt">
+
+  </div> -->
+
+
+  <div>
+    <iframe src="guten_address.txt" width="100%" height="300">
+</iframe>
 
   </div>
 
