--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
   </div> -->
 
 
-  <div>
-    <iframe src="guten_address.txt" width="100%" height="300">
+  <div class="text" id="text">
+    <iframe src="guten_address.txt" width="300%" height="700">
 </iframe>
 
   </div>
