--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 
   <div class="text" id="text">
-    <iframe src="guten_address.txt" width="330%" height="700">
+    <iframe src="99-story.txt" width="330%" height="700">
 </iframe>
 
   </div>
