--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="index.css" />
-  <!-- <script src= "guten_output.js"></script> -->
+  <script src= "guten_output.js"></script>
   <script type= "text/javascript">
   <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
   <script language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
@@ -66,7 +66,7 @@
 
 
   <div class="text" id="text">
-    <iframe src= './' + index + '-story.txt' width="330%" height="700">
+    <iframe src= './' + index + '-story.txt' width="100%" height="100%">
 </iframe>
 
   </div>
