--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <!-- <!DOCTYPE html>
 <html>
 <head>
-  <script src= "imdb_output.js"></script>
-  <script type= "text/javascript">
+<script src= "imdb_output.js"></script>
+<script type= "text/javascript">
 
-  function load_imdb_images(){
-    var div = document.getElementById('data');
+function load_imdb_images(){
+var div = document.getElementById('data');
 
-    for(var i = 0; i < imdb_output.length; i++){
-      var img = "<img class='tile' src='"+ imdb_output[i] + "'>";
-      div.innerHTML = div.innerHTML + img;
-    }
+for(var i = 0; i < imdb_output.length; i++){
+var img = "<img class='tile' src='"+ imdb_output[i] + "'>";
+div.innerHTML = div.innerHTML + img;
+}
 
-  }
-  </script>
+}
+</script>
 </head>
 
 <body onload ="load_imdb_images()">
-  <div id="data">
+<div id="data">
 
-  </div>
+</div>
 
 
 
@@ -33,21 +33,20 @@
 <head>
   <link rel="stylesheet" href="index.css" />
   <script src= "guten_output.js"></script>
-  <script type= "text/javascript">
   <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
   <script language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
   <script language="javascript" type="text/javascript" src="sketch.js"></script>
 
+  <script language="javascript" type="text/javascript">
+    function load_guten_images(){
+      var div = document.getElementById('data');
 
-  function load_guten_images(){
-    var div = document.getElementById('data');
+      for(var i = 0; i < guten_output.length; i++){
+        var img = "<img class='tile' src='"+ guten_output[i] + "'>";
+        div.innerHTML = div.innerHTML + img;
+      }
 
-    for(var i = 0; i < guten_output.length; i++){
-      var img = "<img class='tile' src='"+ guten_output[i] + "'>";
-      div.innerHTML = div.innerHTML + img;
     }
-
-  }
   </script>
 </head>
 
@@ -60,16 +59,16 @@
 
 
   <!-- <div class="text" id="text" width='300px' height='1000px'>
-    <embed src="guten_address.txt">
+  <embed src="guten_address.txt">
 
-  </div> -->
+</div> -->
 
 
-  <div class="text" id="text">
-    <iframe src= './' + index + '-story.txt' width="100%" height="100%">
-</iframe>
+<div class="text" id="text">
+  <iframe src= './' + index + '-story.txt' width="100%" height="100%">
+  </iframe>
 
-  </div>
+</div>
 
 <script src="script.js"></script>
 
