--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ div.innerHTML = div.innerHTML + img;
 <html>
 <head>
   <link rel="stylesheet" href="index.css" />
-  <script src= "guten_output.js"></script>
+  <!-- <script src= "guten_output.js"></script> -->
   <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
   <script language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
   <script language="javascript" type="text/javascript" src="sketch.js"></script>
