--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ div.innerHTML = div.innerHTML + img;
   <!-- <script src= "guten_output.js"></script> -->
   <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
   <script language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
   <script language="javascript" type="text/javascript" src="sketch.js"></script>
 
   <script language="javascript" type="text/javascript">
