--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ div.innerHTML = div.innerHTML + img;
   </script>
 </head>
 
-<body onload ="load_guten_images()">
+<!-- <body onload ="load_guten_images()"> -->
   <div id="content"></div>
   <div id="data">
 
