--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@ div.innerHTML = div.innerHTML + img;
   <script language="javascript" type="text/javascript" src="sketch.js"></script>
 
   <script language="javascript" type="text/javascript">
-    function load_guten_images(){
-      var div = document.getElementById('data');
-
-      for(var i = 0; i < guten_output.length; i++){
-        var img = "<img class='tile' src='"+ guten_output[i] + "'>";
-        div.innerHTML = div.innerHTML + img;
-      }
-
-    }
+    // function load_guten_images(){
+    //   var div = document.getElementById('data');
+    //
+    //   for(var i = 0; i < guten_output.length; i++){
+    //     var img = "<img class='tile' src='"+ guten_output[i] + "'>";
+    //     div.innerHTML = div.innerHTML + img;
+    //   }
+    //
+    // }
   </script>
 </head>
 
