--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@ div.innerHTML = div.innerHTML + img;
 <!-- <body onload ="load_guten_images()"> -->
   <div id="content"></div>
   <div id="data">
+  <iframe id="myHtml" src="98-story.html"></iframe>
 
   </div>
 
