--- a/0-story.html
+++ b/0-story.html
@@ -1,1 +1,12 @@
-Service Unavailable,XID: 1397313093,Varnish cache server
+Project Gutenberg needs your donation! 
+        More Info,
+Did you know that you can help us produce ebooks
+by proof-reading just one page a day?
+Go to: Distributed Proofreaders,Sorry, but the page or book you tried to access is unavailable.
+,We are gradually updating all eBooks older than #10.000, 
+and in the process, moving them to a new filing system.,
+You can search for a book.   
+We apologize for the inconvenience.  
+Thanks for visiting Project Gutenberg, and happy reading!,
+            Web site copyright © 2003-2010 Project Gutenberg Literary Archive Foundation — All Rights Reserved.
+          
