--- a/index.html
+++ b/index.html
@@ -53,10 +53,11 @@ div.innerHTML = div.innerHTML + img;
 
 <!-- <body onload ="load_guten_images()"> -->
   <div id="content"></div>
-  <div id="data">
-  <iframe id="myHtml" src="10-story.html"></iframe>
 
-  </div>
+  <!-- <div id="data">
+    <iframe id="myHtml" src="10-story.html"></iframe>
+
+  </div> -->
 
 
 
@@ -66,11 +67,11 @@ div.innerHTML = div.innerHTML + img;
 </div> -->
 
 
-<div class="text" id="text">
+<!-- <div class="text" id="text">
   <iframe src= './' + index + '-story.txt' width="100%" height="100%">
   </iframe>
 
-</div>
+</div> -->
 
 <script src="script.js"></script>
 
