--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ div.innerHTML = div.innerHTML + img;
 </head>
 
 <!-- <body onload ="load_guten_images()"> -->
-  <div id="content"></div>
+  <!-- <div id="content"></div> -->
 
   <!-- <div id="data">
     <iframe id="myHtml" src="10-story.html"></iframe>
