--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@ div.innerHTML = div.innerHTML + img;
   <script language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script language="javascript" type="text/javascript" src="sketch.js"></script>
+  <script src="build.js"></script>
 
   <script language="javascript" type="text/javascript">
     // function load_guten_images(){
