--- a/12-story.html
+++ b/12-story.html
@@ -1,1 +1,42 @@
-Service Unavailable,XID: 675906352,Varnish cache server
+OF DANTE ALIGHIERI
+(1265-1321)
+
+
+,TRANSLATED BY
+HENRY WADSWORTH LONGFELLOW
+(1807-1882)
+
+
+
+
+,The base text for this edition has been provided by Digital Dante, a
+project sponsored by Columbia University's Institute for Learning
+Technologies.  Specific thanks goes to Jennifer Hogan (Project
+Editor/Director), Tanya Larkin (Assistant to Editor), Robert W. Cole
+(Proofreader/Assistant Editor), and Jennifer Cook (Proofreader).
+
+,The Digital Dante Project is a digital 'study space' for Dante studies and
+scholarship.  The project is multi-faceted and fluid by nature of the Web.
+Digital Dante attempts to organize the information most significant for
+students first engaging with Dante and scholars researching Dante.  The
+digital of Digital Dante incurs a new challenge to the student, the
+scholar, and teacher, perusing the Web: to become proficient in the new
+tools, e.g., Search, the Discussion Group, well enough to look beyond the
+technology and delve into the content.  For more information and access to
+the project, please visit its web site at:
+http://www.ilt.columbia.edu/projects/dante/
+
+,For this Project Gutenberg edition the e-text was rechecked.  The editor
+greatly thanks Dian McCarthy for her assistance in proofreading the
+Paradiso.  Also deserving praise are Herbert Fann for programming the text
+editor "Desktop Tools/Edit" and the late August Dvorak for designing his
+keyboard layout.  Please refer to Project Gutenberg's e-text listings for
+other editions or translations of 'The Divine Comedy.'  For this three part
+edition of 'The Divine Comedy' please refer to the end of the Paradiso for
+supplemental materials.
+
+,Dennis McCarthy, July 1997
+
+
+
+
