--- a/index.html
+++ b/index.html
@@ -52,6 +52,27 @@ div.innerHTML = div.innerHTML + img;
   </script>
 </head>
 
+<body>
+
+  <div class="readbooks">
+READ BOOKS
+  </div>
+
+  <div class="faster">
+FASTER
+  </div>
+
+
+  <div class="book1">
+    <img src="book.png">
+  </div>
+
+  <div id="container">
+    <input value="what's that book?"  onclick="loadFile()" />
+    <div id="booktitle">
+    </div>
+
+
 <!-- <body onload ="load_guten_images()"> -->
   <!-- <div id="content"></div> -->
 
