--- a/index.html
+++ b/index.html
@@ -70,6 +70,21 @@ FASTER
   <div id="container" class="container">
     </div>
 
+    <div id="circle" class="circle">
+      </div>
+
+    <div id="video" class="video">
+      <video autoplay muted width="420">
+  <source src="bookread.mp4" type="video/mp4">
+</video>
+      </div>
+
+
+<button value="Refresh Page" class="button" onClick="window.location.reload();">CHANGE THE BOOK</button>
+
+
+
+
 
 <!-- <body onload ="load_guten_images()"> -->
   <!-- <div id="content"></div> -->
