--- a/index.html
+++ b/index.html
@@ -70,8 +70,18 @@ FASTER
   <div id="container" class="container">
     </div>
 
-    <div id="circle" class="circle">
-      </div>
+    <!-- <div id="circle" class="circle">
+      </div> -->
+
+      <div id="info" class="info">
+      i
+    </div>
+
+    <div id="explanation" class="explanation">
+  </div>
+
+  <div id="back" class="back">
+</div>
 
     <div id="video" class="video">
       <video autoplay muted width="420">
