--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ FASTER
 </div>
 
     <div id="video" class="video">
-      <video autoplay muted width="420">
+      <video autoplay width="420">
   <source src="bookread.mp4" type="video/mp4">
 </video>
       </div>
