--- a/index.html
+++ b/index.html
@@ -83,11 +83,13 @@ FASTER
   <div id="back" class="back">
 </div>
 
-    <div id="video" class="video">
-      <video autoplay width="420">
+<embed src="bookread.mp3" autostart="true" loop="true" hidden="true">
+
+    <!-- <div id="video" class="video">
+      <video autoplay muted width="420">
   <source src="bookread.mp4" type="video/mp4">
 </video>
-      </div>
+      </div> -->
 
 
 <button value="Refresh Page" class="button" onClick="window.location.reload();">CHANGE THE BOOK</button>
