website look changes

--- a/index.html
+++ b/index.html
@@ -50,12 +50,17 @@ div.innerHTML = div.innerHTML + img;
     //
     // }
   </script>
+  <!-- <meta https-equiv="refresh" content="4"> -->
 </head>
 
 <body>
 
-  <div class="readbooks">
-READ BOOKS
+  <div class="read">
+READ
+  </div>
+
+  <div class="books">
+BOOKS
   </div>
 
   <div class="faster">
@@ -63,19 +68,27 @@ FASTER
   </div>
 
 
-  <div class="book1">
+  <!-- <div class="book1">
     <img src="book.png">
+  </div> -->
+
+
+  <div class="gut">
+    <img src="gut.jpg">
   </div>
 
   <div id="container" class="container">
     </div>
 
+    <div id="inittext" class="inittext">
+      </div>
+
     <!-- <div id="circle" class="circle">
       </div> -->
 
-      <div id="info" class="info">
+      <!-- <div id="info" class="info">
       i
-    </div>
+    </div> -->
 
     <div id="explanation" class="explanation">
   </div>
@@ -92,7 +105,7 @@ FASTER
       </div> -->
 
 
-<button value="Refresh Page" class="button" onClick="window.location.reload();">CHANGE THE BOOK</button>
+<!-- <button value="Refresh Page" class="button" onClick="window.location.reload();">CHANGE THE BOOK</button> -->
 
 
 
