final for now i guess

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ div.innerHTML = div.innerHTML + img;
 
 <body>
 
-  <div class="read">
+  <!-- <div class="read">
 READ
   </div>
 
@@ -65,7 +65,7 @@ BOOKS
 
   <div class="faster">
 FASTER
-  </div>
+  </div> -->
 
 
   <!-- <div class="book1">
@@ -73,14 +73,12 @@ FASTER
   </div> -->
 
 
-  <div class="gut">
-    <img src="gut.jpg">
-  </div>
+
 
   <div id="container" class="container">
     </div>
 
-    <div id="inittext" class="inittext">
+    <div id="inittext" class="inittext" >
       </div>
 
     <!-- <div id="circle" class="circle">
@@ -97,6 +95,10 @@ FASTER
 </div>
 
 <embed src="bookread.mp3" autostart="true" loop="true" hidden="true">
+
+
+<!--
+  <button width=120 height=300 onclick="highlight(the)">Highlight</button> -->
 
     <!-- <div id="video" class="video">
       <video autoplay muted width="420">
@@ -133,6 +135,10 @@ FASTER
 
 </div> -->
   <div id="links"></div>
+
+  <div id="backs" class="backs">
+    <img src="yellow.jpg">
+  </div>
 
 <script src="script.js"></script>
 
